k8s/apps/norsemen/norsemen.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: norsemen

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: norsemen
  namespace: norsemen
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: norsemen
  template:
    metadata:
      labels:
        app: norsemen
    spec:
      containers:
      - name: norsemen
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
      volumes:
      - name: www
        persistentVolumeClaim:
          claimName: norsemen-www

---
apiVersion: v1
kind: Service
metadata:
  name: norsemen
  namespace: norsemen
spec:
  selector:
    app: norsemen
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: norsemen
  namespace: norsemen
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - norsemen.szigethy.lan
    secretName: norsemen-tls
  rules:
  - host: norsemen.szigethy.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: norsemen
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: norsemen-public
  namespace: norsemen
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - norsemen.io
    secretName: letsencrypt-tls
  rules:
  - host: norsemen.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: norsemen
            port:
              number: 80
